--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       <h1><a href="index.html">IGNATIUS TUTU</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>software engineer,</span> <span>financial engineer,</span> <span>graphic designer</span> from Ghana</h2>
+      <h2>I'm a passionate <span>Software engineer,</span> <span>Financial engineer,</span>
+        <span>Graphic designer</span> & <span>Video editor</span> from Ghana</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -50,16 +51,19 @@
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
           <!-- <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
+           <li><a class="nav-link" href="portfolio-side.html">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/iTutu_iTutu" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://web.facebook.com/ignatiustutu/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/ignatius_tutu/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/ignatius-tutu-886651a9/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/i-tutu" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://www.youtube.com/channel/UCquRwazxq6Yr5jvZPKro5OQ" class="youtube"><i class="bi bi-youtube"></i></a>
       </div>
 
     </div>
@@ -84,8 +88,9 @@
           <!-- <h3>UI/UX &amp; Graphic Designer</h3> -->
           <h3>About Myself</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            Seeking to leverage solid skills in helping others with what I know. I’m a natural
+            motivator both for myself and for others. Passionate about data security, software,
+            investment and educating the next generation of technology. Ardent in what I do.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -106,8 +111,13 @@
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            <span>Matthew 6:33 </span><br>
+            But seek ye first the kingdom of God, and his righteousness; and all these things shall be added unto you.
+          </p>
+          <p>
+            <span>Albert Camus</span><br>
+            I would rather live my life as if there is a God and die to find out there isn't, than live as if
+            there isn't and to die to find out that there is.
           </p>
         </div>
       </div>
@@ -306,7 +316,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-            <h3>Finances</h3>
+            <h3>Fintech</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -315,30 +325,30 @@
             <h3>Drawing</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-anchor-line" style="color: #b2904f;"></i>
-            <h3>Dirada Pack</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-disc-line" style="color: #b20969;"></i>
-            <h3>Moton Ideal</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-base-station-line" style="color: #ff5828;"></i>
-            <h3>Verdo Park</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-            <h3>Flavor Nivelanda</h3>
-          </div>
-        </div>
+<!--        <div class="col-lg-3 col-md-4 mt-4">-->
+<!--          <div class="icon-box">-->
+<!--            <i class="ri-anchor-line" style="color: #b2904f;"></i>-->
+<!--            <h3>Playing</h3>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="col-lg-3 col-md-4 mt-4">-->
+<!--          <div class="icon-box">-->
+<!--            <i class="ri-disc-line" style="color: #b20969;"></i>-->
+<!--            <h3>Deep Conversation</h3>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="col-lg-3 col-md-4 mt-4">-->
+<!--          <div class="icon-box">-->
+<!--            <i class="ri-base-station-line" style="color: #ff5828;"></i>-->
+<!--            <h3>Verdo Park</h3>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="col-lg-3 col-md-4 mt-4">-->
+<!--          <div class="icon-box">-->
+<!--            <i class="ri-fingerprint-line" style="color: #29cc61;"></i>-->
+<!--            <h3>Flavor Nivelanda</h3>-->
+<!--          </div>-->
+<!--        </div>-->
       </div>
 
     </div><!-- End Interests -->
@@ -509,13 +519,13 @@
          
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>HND Computer Network Management</h4>
+            <h4>HND, Computer Network Management</h4>
             <h5>2017 - 2020</h5>
             <p><em>Koforidua Technical University, Koforidua, Eastern Region</em></p>
             <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
           </div>
           <div class="resume-item">
-            <h4>Business Management</h4>
+            <h4>WASSCE, Business Management</h4>
             <h5>2011 - 2014</h5>
             <p><em>Labone Senior High School, Labone, Greater Accra</em></p>
             <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
@@ -781,11 +791,12 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://twitter.com/iTutu_iTutu" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://web.facebook.com/ignatiustutu/" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/ignatius_tutu/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/ignatius-tutu-886651a9/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/i-tutu" class="github"><i class="bi bi-github"></i></a>
+              <a href="https://www.youtube.com/channel/UCquRwazxq6Yr5jvZPKro5OQ" class="youtube"><i class="bi bi-youtube"></i></a>
             </div>
           </div>
         </div>
@@ -833,8 +844,7 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-    <!-- https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by Ignatius Tutu
+    Developer: Ignatius Tutu
   </div>
 
   <!-- Vendor JS Files -->
