--- a/portfolio-side.html
+++ b/portfolio-side.html
@@ -46,15 +46,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <a href="https://suaponbia.com/"><img src="assets/img/portfolio/portfolio-side-1.jpg" alt="suaponbia student girl"></a>
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <a href="https://suaponbia.com/"><img src="assets/img/portfolio/portfolio-side-2.jpg" alt="suaponbia boys"></a>
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <a href="https://suaponbia.com/"><img src="assets/img/portfolio/portfolio-side-3.jpg" alt="suaponbia learning"></a>
                 </div>
 
               </div>
@@ -76,6 +76,8 @@
               Suaponbia.com is a student and youth focus project that brings opportunities right to them.
 
             </p>
+
+            <a href="index.html">Home</a>
           </div>
 
         </div>
