add cv file pdf and download button

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <!-- <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
            <li><a class="nav-link" href="portfolio-side.html">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a href="assets/docs/tutu_cv.pdf" download>Download CV</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
