edited the index file

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-    Developer: Ignatius Tutu
+    Developer: Ignatius Tutu.
   </div>
 
   <!-- Vendor JS Files -->
